# inmuebles

./: .flake8  .pre-commit-config.yaml  Insomnia_test_api.json  README.md  favorites.sql  filters.json  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/config/: config_env.py  database.py
app/models/: model.py  property.py
app/models/schemas/: property_schema.py
app/routes/: route.py  route_v1.py
app/services/: property_service.py
src/app/: main.py
tests/: test_database.py  test_property.py  test_route_v1.py
